--- a/docs/Tutorials/Dynamics/Coagulation/Charge/Coagulation_Charge_functional.ipynb
+++ b/docs/Tutorials/Dynamics/Coagulation/Charge/Coagulation_Charge_functional.ipynb
@@ -5,7 +5,6 @@
    "id": "0ae95a50-0b20-48bd-8b6a-aad8f10b4778",
    "metadata": {},
    "source": [
-    "# %% [markdown]\n",
     "\n",
     "# Coagulation with Charge Effects\n",
     "In this tutorial, we explore how electrical charge influences the coagulation (collisions and coalescence) of aerosol particles. We will:\n",
@@ -22,9 +21,7 @@
    "id": "31eed690-96f8-4891-9b9d-c91531fa9ca5",
    "metadata": {},
    "source": [
-    "# %% [markdown]\n",
-    "\n",
-    "## Import Necessary Libraries\n",
+    "*Import Necessary Libraries*\n",
     "We import standard libraries like `numpy` and `matplotlib` for numerical computations and plotting. We also import specific functions from the `particula` package, which is used for aerosol dynamics simulations."
    ]
   },
@@ -67,8 +64,6 @@
    "id": "ef60252b-0bdd-48e2-82f0-90e261f0f620",
    "metadata": {},
    "source": [
-    "# %% [markdown]\n",
-    "\n",
     "## Define the Particle Size Distribution\n",
     "We create a size distribution for aerosol particles using a logarithmic scale for particle radius, ranging from 1 nm to 10 μm. We calculate the mass of particles in each size bin assuming they are spherical and have a standard density.\n",
     " Define the bins for particle radius using a logarithmic scale"
@@ -94,8 +89,6 @@
    "id": "a66a9fb8-5dd1-435c-9b8b-61ac9bf5a9af",
    "metadata": {},
    "source": [
-    "# %% [markdown]\n",
-    "\n",
     "## Define Particle Charges\n",
     "We assign charges to the particles. In this example, we assign negative charges to the first 33% of particles and positive charges to the remaining 66% of particles. The charges are assigned based on the particle radius, with negative charges ranging from 10 to 1 and positive charges ranging from 1 to 500. We then plot the charge distribution against the particle radius.\n",
     " Determine the number of radius bins"
@@ -154,8 +147,6 @@
    "id": "5404a1c1-c3c9-44c5-ab2f-4c5ee85d7c69",
    "metadata": {},
    "source": [
-    "# %% [markdown]\n",
-    "\n",
     "## Calculate Coulomb Potential Ratio and Related Properties\n",
     "In this section, we compute several properties necessary for calculating the coagulation kernel with charge effects:\n",
     "- **Coulomb Potential Ratio**: Using `coulomb_enhancement.ratio`, we calculate the dimensionless Coulomb potential ratio, which quantifies the electrostatic interaction between charged particles.\n",
@@ -207,8 +198,6 @@
    "id": "3223baa1-696c-484a-a4b7-e48114bff0b6",
    "metadata": {},
    "source": [
-    "# %% [markdown]\n",
-    "\n",
     "## Compute the Non-Dimensional Coagulation Kernel\n",
     "The non-dimensional coagulation kernel is calculated using `coulomb_chahl2019`, which incorporates charge effects into the rate at which particles collide."
    ]
@@ -231,8 +220,6 @@
    "id": "7c60ef01-cbf4-45bc-ad40-91011a554c89",
    "metadata": {},
    "source": [
-    "# %% [markdown]\n",
-    "\n",
     "## Calculate Coulomb Enhancement Factors\n",
     "We compute the Coulomb enhancement factors in both the kinetic and continuum limits:\n",
     "- **Kinetic Limit**: Using `coulomb_enhancement.kinetic`, applicable when particle motions are dominated by random thermal motion.\n",
@@ -262,8 +249,6 @@
    "id": "c0f1c046-870b-4b4a-bf9d-6508da40514e",
    "metadata": {},
    "source": [
-    "# %% [markdown]\n",
-    "\n",
     "## Compute the Dimensional Coagulation Kernel\n",
     "The dimensional coagulation kernel combines all the previously calculated factors and gives the actual rate at which particles of different sizes collide and stick together due to coagulation, considering charge effects."
    ]
@@ -289,8 +274,6 @@
    "id": "7ad8cc60-7fda-4251-a939-2afc6a762bd5",
    "metadata": {},
    "source": [
-    "# %% [markdown]\n",
-    "\n",
     "## Plot the Coagulation Kernel\n",
     "We plot the coagulation kernel as a function of particle radius to visualize how charge affects the coagulation rates across different particle sizes."
    ]
@@ -338,8 +321,6 @@
    "id": "a3ac5a5d-849a-44ee-9597-cdf99fd0f211",
    "metadata": {},
    "source": [
-    "# %% [markdown]\n",
-    "\n",
     "## Simulate Coagulation Over a Time Step\n",
     "We calculate the gain and loss rates of particle concentrations due to coagulation using the previously computed kernel. The net rate of change in particle concentration is obtained by subtracting the loss rate from the gain rate.\n",
     " get rates of coagulation dn/dt\n",
@@ -378,8 +359,6 @@
    "id": "6bc85ea9-615b-4db0-a49b-824a6a66611c",
    "metadata": {},
    "source": [
-    "# %% [markdown]\n",
-    "\n",
     "## Plot Particle Concentration and Coagulation Rates\n",
     "We visualize the initial particle concentration distribution and the coagulation rates to understand how charge effects influence the coagulation process over time.\n",
     "- **Particle Concentration**: Shows the number concentration of particles across different sizes.\n",
