--- a/docs/Tutorials/Dynamics/Coagulation/Charge/Coagulation_Charge_functional.ipynb
+++ b/docs/Tutorials/Dynamics/Coagulation/Charge/Coagulation_Charge_functional.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "8f0cb0a0-79f0-4ba7-b52e-ec57cfb4a1ef",
    "metadata": {},
    "outputs": [],
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "e533228a-2a0e-4277-a811-573ea5965cfb",
    "metadata": {},
    "outputs": [],
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "446c1cd5-2c58-444d-8c7b-5bfd5d9d3695",
    "metadata": {},
    "outputs": [
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "2f9ce2c2-b60e-4ed8-bd4e-07679aabcb9c",
    "metadata": {},
    "outputs": [],
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "dc9bd39a-32ce-4919-a3a8-f962b9fbc5e2",
    "metadata": {},
    "outputs": [],
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "d3767580-43ec-46a7-8b46-e9d156f532f4",
    "metadata": {},
    "outputs": [],
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "d5312887-5493-4b3c-8c82-9fbbcbfb6bf7",
    "metadata": {},
    "outputs": [],
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "c269f0ba-6eca-40c6-a8b0-a3acc987845f",
    "metadata": {},
    "outputs": [
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "da47f907-00e1-4db7-9a99-ee8136add0fc",
    "metadata": {},
    "outputs": [],
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "af6985f3-8936-497b-aba6-7693055ade34",
    "metadata": {},
    "outputs": [
@@ -418,6 +418,11 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "particula_dev312",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
@@ -428,7 +433,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": 3
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
