--- a/docs/Discussions/Technical/Cloud_Droplet_Coagulation/DNS_Radial_Distribution_Comparison.ipynb
+++ b/docs/Discussions/Technical/Cloud_Droplet_Coagulation/DNS_Radial_Distribution_Comparison.ipynb
@@ -104,11 +104,11 @@
    "source": [
     "## DNS Datasets\n",
     "\n",
-    "We have the following DNS datasets for the radial distribution function $g_{12}$:\n",
-    "- **Case 1**: $R_\\lambda = 23$, $\\varepsilon = 100$ cm²/s³\n",
-    "- **Case 2**: $R_\\lambda = 23$, $\\varepsilon = 400$ cm²/s³\n",
-    "- **Case 3**: $R_\\lambda = 72.4$, $\\varepsilon = 100$ cm²/s³\n",
-    "- **Case 4**: $R_\\lambda = 72.4$, $\\varepsilon = 400$ cm²/s³\n",
+    "We have the following DNS datasets for the radial distribution function g₁₂:\n",
+    "- **Case 1**: R_λ = 23, ε = 100 cm²/s³\n",
+    "- **Case 2**: R_λ = 23, ε = 400 cm²/s³\n",
+    "- **Case 3**: R_λ = 72.4, ε = 100 cm²/s³\n",
+    "- **Case 4**: R_λ = 72.4, ε = 400 cm²/s³\n",
     "\n",
     "DNS datasets for radial distribution function are from Ayala et al. (2008)."
    ]
@@ -205,12 +205,12 @@
    "id": "b29b07c2-7083-46d8-af50-67eaee8c9f96",
    "metadata": {},
    "source": [
-    "## Compute $g_{12}$ Values for Each Case\n",
+    "## Compute g₁₂ Values for Each Case\n",
     "Using the `g12_calc` function, we compute the radial distribution function for each case:\n",
-    "- **Case 1**: $R_\\lambda = 23$, $\\varepsilon = 100$ cm²/s³\n",
-    "- **Case 2**: $R_\\lambda = 23$, $\\varepsilon = 400$ cm²/s³\n",
-    "- **Case 3**: $R_\\lambda = 72.4$, $\\varepsilon = 100$ cm²/s³\n",
-    "- **Case 4**: $R_\\lambda = 72.4$, $\\varepsilon = 400$ cm²/s³"
+    "- **Case 1**: R_λ = 23, ε = 100 cm²/s³\n",
+    "- **Case 2**: R_λ = 23, ε = 400 cm²/s³\n",
+    "- **Case 3**: R_λ = 72.4, ε = 100 cm²/s³\n",
+    "- **Case 4**: R_λ = 72.4, ε = 400 cm²/s³"
    ]
   },
   {
