ran notebook, except dynamics

--- a/docs/Tutorials/Gas_Phase/Notebooks/AtmosphereTutorial.ipynb
+++ b/docs/Tutorials/Gas_Phase/Notebooks/AtmosphereTutorial.ipynb
@@ -70,10 +70,10 @@
     "water_species = (\n",
     "    par.gas.GasSpeciesBuilder()\n",
     "    .set_name(\"water\")\n",
-    "    .set_molar_mass(18.01528e-3)\n",
+    "    .set_molar_mass(18.01528e-3, \"kg/mol\")\n",
     "    .set_vapor_pressure_strategy(water_buck)\n",
     "    .set_condensable(True)\n",
-    "    .set_concentration(1e-3)\n",
+    "    .set_concentration(1e-3, \"kg/m^3\")\n",
     "    .build()\n",
     ")\n",
     "\n",
@@ -85,10 +85,10 @@
     "organic_species = (\n",
     "    par.gas.GasSpeciesBuilder()\n",
     "    .set_name(organic_names)\n",
-    "    .set_molar_mass(organic_molar_mass)\n",
+    "    .set_molar_mass(organic_molar_mass, \"kg/mol\")\n",
     "    .set_vapor_pressure_strategy(organic_vapor_pressure)\n",
     "    .set_condensable(True)\n",
-    "    .set_concentration(organic_concentration)\n",
+    "    .set_concentration(organic_concentration, \"kg/m^3\")\n",
     "    .build()\n",
     ")\n",
     "\n",
