--- a/docs/Tutorials/Gas_Phase/Notebooks/Gas_Species.ipynb
+++ b/docs/Tutorials/Gas_Phase/Notebooks/Gas_Species.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -183,10 +183,10 @@
     "organic_species = (\n",
     "    par.gas.GasSpeciesBuilder()\n",
     "    .set_name(organic_names)\n",
-    "    .set_molar_mass(organic_molar_mass)\n",
+    "    .set_molar_mass(organic_molar_mass, \"kg/mol\")\n",
     "    .set_vapor_pressure_strategy(organic_vapor_pressure)\n",
     "    .set_condensable([True, True])\n",
-    "    .set_concentration(organic_concentration)\n",
+    "    .set_concentration(organic_concentration, \"kg/m^3\")\n",
     "    .build()\n",
     ")\n",
     "\n",
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
