--- a/docs/Tutorials/Particle_Phase/Notebooks/Activity_Tutorial.ipynb
+++ b/docs/Tutorials/Particle_Phase/Notebooks/Activity_Tutorial.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
    "source": [
     "activity_molar = (\n",
     "    par.particles.ActivityIdealMolarBuilder()\n",
-    "    .set_molar_mass(np.array([18.01528, 342.29648]))  # water, sucrose\n",
+    "    .set_molar_mass(np.array([18.01528, 342.29648])*1e-3, \"kg/mol\")  # water, sucrose\n",
     "    .build()\n",
     ")\n",
     "\n",
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
