lint and change coag problem

--- a/docs/How-To-Guides/Nucleation/Notebooks/Custom_Nucleation_Single_Species.ipynb
+++ b/docs/How-To-Guides/Nucleation/Notebooks/Custom_Nucleation_Single_Species.ipynb
@@ -23,7 +23,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# particula\n",
-    "import particula as par\n"
+    "import particula as par"
    ]
   },
   {
