--- a/docs/Tutorials/Dynamics/Condensation/Condensation_3_MassResolved.ipynb
+++ b/docs/Tutorials/Dynamics/Condensation/Condensation_3_MassResolved.ipynb
@@ -50,7 +50,9 @@
     "vapor_pressure_ammonium = par.gas.VaporPressureFactory().get_strategy(\n",
     "    \"constant\", parameters_vapor\n",
     ")\n",
-    "vapor_pressure_water = par.gas.VaporPressureFactory().get_strategy(\"water_buck\")\n",
+    "vapor_pressure_water = par.gas.VaporPressureFactory().get_strategy(\n",
+    "    \"water_buck\"\n",
+    ")\n",
     "\n",
     "water_sat = vapor_pressure_water.saturation_concentration(\n",
     "    molar_mass=molar_mass_water, temperature=298.15\n",
@@ -137,7 +139,9 @@
     "    par.particles.ActivityKappaParameterBuilder()\n",
     "    .set_density(densities, \"kg/m^3\")\n",
     "    .set_kappa(np.array([0.0, 0.61]))\n",
-    "    .set_molar_mass(np.array([molar_mass_water, molar_mass_ammonium_sulfate]), \"kg/mol\")\n",
+    "    .set_molar_mass(\n",
+    "        np.array([molar_mass_water, molar_mass_ammonium_sulfate]), \"kg/mol\"\n",
+    "    )\n",
     "    .set_water_index(0)\n",
     "    .build()\n",
     ")\n",
@@ -171,7 +175,9 @@
     ")\n",
     "\n",
     "# Create an aerosol object with the defined atmosphere and resolved particles\n",
-    "aerosol_resolved = par.Aerosol(atmosphere=atmosphere, particles=resolved_masses)\n",
+    "aerosol_resolved = par.Aerosol(\n",
+    "    atmosphere=atmosphere, particles=resolved_masses\n",
+    ")\n",
     "\n",
     "# Print the properties of the atmosphere\n",
     "print(aerosol_resolved)"
