--- a/docs/Tutorials/Gas_Phase/Notebooks/Gas_Species.ipynb
+++ b/docs/Tutorials/Gas_Phase/Notebooks/Gas_Species.ipynb
@@ -71,7 +71,9 @@
     "# The Buck equation is particularly suited for water vapor calculations.\n",
     "# No additional parameters are required to be passed for the Buck equation\n",
     "# in this instance.\n",
-    "water_buck = par.gas.VaporPressureFactory().get_strategy(strategy_type=\"water_buck\")"
+    "water_buck = par.gas.VaporPressureFactory().get_strategy(\n",
+    "    strategy_type=\"water_buck\"\n",
+    ")"
    ]
   },
   {
