--- a/docs/Tutorials/Gas_Phase/Notebooks/Vapor_Pressure.ipynb
+++ b/docs/Tutorials/Gas_Phase/Notebooks/Vapor_Pressure.ipynb
@@ -117,7 +117,9 @@
     "# Direct instantiation of an AntoineVaporPressureStrategy for butanol.\n",
     "# This approach directly sets the coefficients 'a', 'b', and 'c' specific\n",
     "# to butanol for calculating its vapor pressure.\n",
-    "butanol_antione = par.gas.AntoineVaporPressureStrategy(a=7.838, b=1558.19, c=196.881)\n",
+    "butanol_antione = par.gas.AntoineVaporPressureStrategy(\n",
+    "    a=7.838, b=1558.19, c=196.881\n",
+    ")\n",
     "\n",
     "# Use the Builder pattern to create a vapor pressure strategy for styrene.\n",
     "# The Builder pattern allows for more flexible object creation by setting properties step-by-step.\n",
@@ -190,7 +192,9 @@
    "source": [
     "# failed build due to missing parameters\n",
     "try:\n",
-    "    styrene_fail = par.gas.AntoineBuilder().set_a(styrene_coefficients[\"a\"]).build()\n",
+    "    styrene_fail = (\n",
+    "        par.gas.AntoineBuilder().set_a(styrene_coefficients[\"a\"]).build()\n",
+    "    )\n",
     "except ValueError as e:\n",
     "    print(e)  # prints error message"
    ]
@@ -518,9 +522,11 @@
     "    \"temperature_initial\": 300,  # Initial temperature in Kelvin\n",
     "    \"pressure_initial\": 1234.56,  # Initial pressure in Pascals\n",
     "}\n",
-    "water_clausius_clapeyron_strategy = par.gas.VaporPressureFactory().get_strategy(\n",
-    "    strategy_type=\"clausius_clapeyron\",\n",
-    "    parameters=water_clausius_clapeyron_parameters,\n",
+    "water_clausius_clapeyron_strategy = (\n",
+    "    par.gas.VaporPressureFactory().get_strategy(\n",
+    "        strategy_type=\"clausius_clapeyron\",\n",
+    "        parameters=water_clausius_clapeyron_parameters,\n",
+    "    )\n",
     ")\n",
     "\n",
     "# Using the Water Buck strategy, no additional parameters needed\n",
