--- a/docs/Tutorials/Particle_Phase/Notebooks/Activity_Tutorial.ipynb
+++ b/docs/Tutorials/Particle_Phase/Notebooks/Activity_Tutorial.ipynb
@@ -114,7 +114,9 @@
    "source": [
     "activity_molar = (\n",
     "    par.particles.ActivityIdealMolarBuilder()\n",
-    "    .set_molar_mass(np.array([18.01528, 342.29648])*1e-3, \"kg/mol\")  # water, sucrose\n",
+    "    .set_molar_mass(\n",
+    "        np.array([18.01528, 342.29648]) * 1e-3, \"kg/mol\"\n",
+    "    )  # water, sucrose\n",
     "    .build()\n",
     ")\n",
     "\n",
