--- a/docs/Tutorials/Particle_Phase/Notebooks/Distribution_Tutorial.ipynb
+++ b/docs/Tutorials/Particle_Phase/Notebooks/Distribution_Tutorial.ipynb
@@ -66,7 +66,9 @@
     "mass_distribution = np.linspace(0, 10, 5)  # kg\n",
     "density = 1000  # kg/m^3\n",
     "\n",
-    "radius = par.particles.MassBasedMovingBin().get_radius(mass_distribution, density)\n",
+    "radius = par.particles.MassBasedMovingBin().get_radius(\n",
+    "    mass_distribution, density\n",
+    ")\n",
     "print(f\"Radius of the particles: {radius} m\")\n",
     "\n",
     "total_mass = par.particles.MassBasedMovingBin().get_total_mass(\n",
