--- a/docs/Tutorials/Particle_Phase/Notebooks/Particle_Representation_Tutorial.ipynb
+++ b/docs/Tutorials/Particle_Phase/Notebooks/Particle_Representation_Tutorial.ipynb
@@ -171,8 +171,10 @@
     "}\n",
     "\n",
     "# Using the factory to create a speciated particle representation\n",
-    "speciated_mass_rep = par.particles.ParticleRepresentationFactory().get_strategy(\n",
-    "    \"mass\", parameters\n",
+    "speciated_mass_rep = (\n",
+    "    par.particles.ParticleRepresentationFactory().get_strategy(\n",
+    "        \"mass\", parameters\n",
+    "    )\n",
     ")\n",
     "\n",
     "# Outputting the total mass of the particle distribution\n",
