--- a/docs/Examples/Chamber_Wall_Loss/Notebooks/Chamber_Forward_Simulation.ipynb
+++ b/docs/Examples/Chamber_Wall_Loss/Notebooks/Chamber_Forward_Simulation.ipynb
@@ -77,7 +77,7 @@
     "\n",
     "# Create particle distribution using the defined parameters\n",
     "\n",
-    "concentraiton_pmf = par.particles.get_lognormal_pmf_distribution(\n",
+    "concentration_pmf = par.particles.get_lognormal_pmf_distribution(\n",
     "    x_values=radius_bins,\n",
     "    mode=mode,\n",
     "    geometric_standard_deviation=geometric_standard_deviation,\n",
@@ -88,7 +88,7 @@
     "# plot the initial particle distribution\n",
     "fig, ax = plt.subplots()\n",
     "ax.plot(\n",
-    "    radius_bins, concentraiton_pmf, label=\"Initial distribution\", marker=\".\"\n",
+    "    radius_bins, concentration_pmf, label=\"Initial distribution\", marker=\".\"\n",
     ")\n",
     "ax.set_xscale(\"log\")\n",
     "ax.set_xlabel(\"Particle radius (m)\")\n",
@@ -140,12 +140,12 @@
     "    alpha_collision_efficiency=1,\n",
     ")\n",
     "coagulation_loss = par.dynamics.get_coagulation_loss_rate_discrete(\n",
-    "    concentration=concentraiton_pmf,\n",
+    "    concentration=concentration_pmf,\n",
     "    kernel=kernel,\n",
     ")\n",
     "coagulation_gain = par.dynamics.get_coagulation_gain_rate_discrete(\n",
     "    radius=radius_bins,\n",
-    "    concentration=concentraiton_pmf,\n",
+    "    concentration=concentration_pmf,\n",
     "    kernel=kernel,\n",
     ")\n",
     "coagulation_net = coagulation_gain - coagulation_loss\n",
@@ -157,7 +157,7 @@
     ")\n",
     "dilution_loss = par.dynamics.get_dilution_rate(\n",
     "    coefficient=dilution_coefficent,\n",
-    "    concentration=concentraiton_pmf,\n",
+    "    concentration=concentration_pmf,\n",
     ")\n",
     "\n",
     "# wall loss rate\n",
@@ -165,7 +165,7 @@
     "    wall_eddy_diffusivity=0.1,\n",
     "    particle_radius=radius_bins,\n",
     "    particle_density=1000,\n",
-    "    particle_concentration=concentraiton_pmf,\n",
+    "    particle_concentration=concentration_pmf,\n",
     "    temperature=293.15,\n",
     "    pressure=101325,\n",
     "    chamber_dimensions=(1, 1, 1),  # m\n",
@@ -237,7 +237,7 @@
     "chamber_wall_loss_rate_matrix = np.zeros((len(time_array), len(radius_bins)))\n",
     "\n",
     "# set the initial concentration\n",
-    "concentration_matrix[0, :] = concentraiton_pmf\n",
+    "concentration_matrix[0, :] = concentration_pmf\n",
     "\n",
     "kernel = par.dynamics.get_brownian_kernel_via_system_state(\n",
     "    particle_radius=radius_bins,\n",
