text comment changed

--- a/docs/Theory/Accelerating_Python/Details/Taichi_Exploration.ipynb
+++ b/docs/Theory/Accelerating_Python/Details/Taichi_Exploration.ipynb
@@ -920,8 +920,8 @@
     "- **Execution Time** via `perf_counter_ns` (min/mean/std)  \n",
     "- **Throughput** (calls/sec)  \n",
     "- **CPU Cycles per Call**  \n",
-    "- **Estimated FLOPs per Call** (fixed at 8,991,000)  \n",
-    "- **Efficiency** (FLOPs per CPU cycle)  \n",
+    "- **Estimated FLOP per Call**\n",
+    "- **Efficiency** (FLOP per CPU cycle)  \n",
     "\n",
     "### 3. Scalability & Trends\n",
     "\n",
