--- a/docs/Theory/Accelerating_Python/Details/Taichi_Exploration.ipynb
+++ b/docs/Theory/Accelerating_Python/Details/Taichi_Exploration.ipynb
@@ -925,7 +925,7 @@
     "\n",
     "### 3. Scalability & Trends\n",
     "\n",
-    "- **Taichi Efficiency** rises steeply with increasing bin count, then plateaus around 3–4 FLOPs/cycle for large problems.  \n",
+    "- **Taichi Efficiency** rises steeply with increasing bin count, then plateaus around 20 FLOPs/cycle for large problems.  \n",
     "- **Python Efficiency** gradually declines as problem size grows.  \n",
     "- **Speedup Ratio** (Taichi:Python) increases from a few hundred at small bin counts to **≈1,000×** at 1,000 bins—demonstrating better amortization of Taichi’s kernel-launch overhead on larger workloads.\n",
     "\n",
