--- a/pr-preview/pr-732/Theory/Accelerating_Python/Details/Taichi_Exploration/Taichi_Exploration.ipynb
+++ b/pr-preview/pr-732/Theory/Accelerating_Python/Details/Taichi_Exploration/Taichi_Exploration.ipynb
@@ -920,12 +920,12 @@
     "- **Execution Time** via `perf_counter_ns` (min/mean/std)  \n",
     "- **Throughput** (calls/sec)  \n",
     "- **CPU Cycles per Call**  \n",
-    "- **Estimated FLOPs per Call** (fixed at 8,991,000)  \n",
-    "- **Efficiency** (FLOPs per CPU cycle)  \n",
+    "- **Estimated FLOP per Call**\n",
+    "- **Efficiency** (FLOP per CPU cycle)  \n",
     "\n",
     "### 3. Scalability & Trends\n",
     "\n",
-    "- **Taichi Efficiency** rises steeply with increasing bin count, then plateaus around 3–4 FLOPs/cycle for large problems.  \n",
+    "- **Taichi Efficiency** rises steeply with increasing bin count, then plateaus around 20 FLOPs/cycle for large problems.  \n",
     "- **Python Efficiency** gradually declines as problem size grows.  \n",
     "- **Speedup Ratio** (Taichi:Python) increases from a few hundred at small bin counts to **≈1,000×** at 1,000 bins—demonstrating better amortization of Taichi’s kernel-launch overhead on larger workloads.\n",
     "\n",
