docs nucleation updated

--- a/docs/Examples/Dynamics/Coagulation/Coagulation_4_Compared.ipynb
+++ b/docs/Examples/Dynamics/Coagulation/Coagulation_4_Compared.ipynb
@@ -54,7 +54,7 @@
     "# AtmosphereBuilder constructs the atmosphere with predefined species\n",
     "atmosphere = (\n",
     "    par.gas.AtmosphereBuilder()\n",
-    "    .add_species(\n",
+    "    .set_more_partitioning_species(\n",
     "        par.gas.PresetGasSpeciesBuilder().build()\n",
     "    )  # Add a preset gas species\n",
     "    .set_temperature(25, temperature_units=\"degC\")  # Set temperature to 25°C\n",
