--- a/docs/Examples/Dynamics/Condensation/Condensation_3_MassResolved.ipynb
+++ b/docs/Examples/Dynamics/Condensation/Condensation_3_MassResolved.ipynb
@@ -69,13 +69,13 @@
     "    )\n",
     "    .set_concentration(np.array([water_concentration, 1e-30]), \"kg/m^3\")\n",
     "    .set_name([\"H2O\", \"NH4HSO4\"])\n",
-    "    .set_condensable([True, True])\n",
+    "    .set_partitioning([True, True])\n",
     "    .build()\n",
     ")\n",
     "\n",
     "atmosphere = (\n",
     "    par.gas.AtmosphereBuilder()\n",
-    "    .add_species(gas_phase)\n",
+    "    .set_more_partitioning_species(gas_phase)\n",
     "    .set_temperature(25, temperature_units=\"degC\")\n",
     "    .set_pressure(1, pressure_units=\"atm\")\n",
     "    .build()\n",
