--- a/docs/Examples/Simulations/Notebooks/Biomass_Burning_Cloud_Interactions.ipynb
+++ b/docs/Examples/Simulations/Notebooks/Biomass_Burning_Cloud_Interactions.ipynb
@@ -202,7 +202,7 @@
     "        np.array([molar_mass_organics, molar_mass_soot, molar_mass_water]),\n",
     "        \"kg/mol\",\n",
     "    )\n",
-    "    .set_condensable(True)\n",
+    "    .set_partitioning(True)\n",
     "    .set_vapor_pressure_strategy([vapor_organics, vapor_soot, vapor_water])\n",
     "    .set_concentration(np.array([1e-12, 1e-12, water_conc]), \"kg/m^3\")\n",
     "    .build()\n",
@@ -210,7 +210,7 @@
     "\n",
     "atmosphere = (\n",
     "    par.gas.AtmosphereBuilder()\n",
-    "    .add_species(gas_species)\n",
+    "    .set_more_partitioning_species(gas_species)\n",
     "    .set_temperature(temperature, \"K\")\n",
     "    .set_pressure(1, \"atm\")\n",
     "    .build()\n",
