--- a/docs/Examples/Dynamics/Condensation/Condensation_1_Bin.ipynb
+++ b/docs/Examples/Dynamics/Condensation/Condensation_1_Bin.ipynb
@@ -86,13 +86,13 @@
     "    .set_vapor_pressure_strategy(vapor_pressure_strategy)\n",
     "    .set_concentration(sat_concentration * sat_factor, \"kg/m^3\")\n",
     "    .set_name(\"Glycerol\")\n",
-    "    .set_condensable(True)\n",
+    "    .set_partitioning(True)\n",
     "    .build()\n",
     ")\n",
     "\n",
     "atmosphere = (\n",
     "    par.gas.AtmosphereBuilder()\n",
-    "    .add_species(glycerol_gas)\n",
+    "    .set_more_partitioning_species(glycerol_gas)\n",
     "    .set_temperature(25, temperature_units=\"degC\")\n",
     "    .set_pressure(1, pressure_units=\"atm\")\n",
     "    .build()\n",
