--- a/docs/Examples/Dynamics/Condensation/Condensation_1_Bin.ipynb
+++ b/docs/Examples/Dynamics/Condensation/Condensation_1_Bin.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,8 +49,8 @@
      "output_type": "stream",
      "text": [
       "Saturation concentration: 2.54e-03 kg/m^3\n",
-      "Gas mixture at 298.15 K and 101325.0 Pa consisting of ['Glycerol']\n",
-      "[0]: Particle Representation:\n",
+      "Gas mixture at 298.15 K, 101325.0 Pa, partitioning=Glycerol, gas_only_species=None\n",
+      "Particle Representation:\n",
       "\tStrategy: RadiiBasedMovingBin\n",
       "\tActivity: ActivityIdealMass\n",
       "\tSurface: SurfaceStrategyVolume\n",
@@ -64,7 +64,7 @@
     "molar_mass_glycerol = 92.09382e-3  # kg/mol\n",
     "parameters_clausius = {\n",
     "    \"latent_heat\": 71.5 * molar_mass_glycerol,\n",
-    "    \"latent_heat_units\": \"kJ/kg\",\n",
+    "    \"latent_heat_units\": \"kJ/mol\",\n",
     "    \"temperature_initial\": 125.5,\n",
     "    \"temperature_initial_units\": \"degC\",\n",
     "    \"pressure_initial\": 1,\n",
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +218,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "particula_dev312",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -232,7 +232,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
