--- a/docs/Examples/Simulations/Notebooks/Organic_Partitioning_and_Coagulation.ipynb
+++ b/docs/Examples/Simulations/Notebooks/Organic_Partitioning_and_Coagulation.ipynb
@@ -356,12 +356,12 @@
     " `SpeciatedMassMovingBin` lets the bin boundaries adapt when mass is\n",
     " added.\n",
     "\n",
-    " > **SpeciatedMassMovingBin:** bin boundaries adapt when mass is added\n",
-    " > – avoids artificial dilution present in fixed-grid schemes.\n",
-    " >\n",
-    " > **Activity & surface strategies:** thermodynamics (ideal,\n",
-    " > etc.) and surface tension models are swappable components, keeping\n",
-    " > the main algorithm clean."
+    "**SpeciatedMassMovingBin:** bin boundaries adapt when mass is added\n",
+    "– avoids artificial dilution present in fixed-grid schemes.\n",
+    "\n",
+    "**Activity & surface strategies:** thermodynamics (ideal,\n",
+    "etc.) and surface tension models are swappable components, keeping\n",
+    "the main algorithm clean."
    ]
   },
   {
@@ -394,9 +394,9 @@
     " Wrap atmosphere + particles into a single high-level object that the\n",
     " dynamical processes will modify in place.\n",
     "\n",
-    " > > **Big picture:** `Aerosol` = `Atmosphere` + `ParticleRepresentation`.\n",
-    " > > Every subsequent *Runnable* process expects a single aerosol object\n",
-    " > > and modifies it in place."
+    "**Big picture:** `Aerosol` = `Atmosphere` + `ParticleRepresentation`.\n",
+    "Every subsequent *Runnable* process expects a single aerosol object\n",
+    "and modifies it in place."
    ]
   },
   {
@@ -440,10 +440,7 @@
     " We use an isothermal Fuchs–Sutugin formulation.\n",
     " `skip_partitioning_indices=[0]` excludes sulfate from condensation.\n",
     "\n",
-    " **Performance hint** – the number of sub-steps controls accuracy.\n",
-    " >\n",
-    " > **Fuchs–Sutugin correction:** bridges the continuum and free-molecular\n",
-    " > diffusion regimes – essential for sub-micron particles.\n",
+    " > **Performance hint** – the number of sub-steps controls accuracy.\n",
     " >\n",
     " > `update_gases=True` removes vapours from the gas pool as they\n",
     " > condense, enforcing mass conservation.\n",
@@ -564,7 +561,7 @@
     " ## Coagulation process\n",
     "\n",
     " Builder selects a discrete Brownian kernel.  Other kernels are\n",
-    " available (van der Waals, viscous damping …).\n",
+    " available and can be swapped by changing the builder called.\n",
     "\n",
     " > **Brownian kernel:** collision frequency determined solely by random\n",
     " > thermal motion; other kernels \n",
@@ -598,6 +595,9 @@
     " coagulation steps.\n",
     " Rule of thumb: `time_step / sub_steps ≈ 0.01 s` keeps condensation\n",
     " stable while minimising overhead.\n",
+    "\n",
+    "Experiment: toggle condensation on to see if coagulation+condensation changes the particle size distribution.\n",
+    " \n",
     " \n",
     " > We loop over 60 outer steps of 10 s each to reach 10 min.  Inside\n",
     " > every step we *could* run condensation with many sub-steps while\n",
@@ -657,13 +657,11 @@
    "metadata": {},
    "source": [
     " ## Results\n",
-    " \n",
+    "\n",
     " The figure contrasts (i) the initial seed distribution, (ii) mass\n",
     " growth after 20 s of SOA partitioning, and (iii) its further\n",
     " evolution through coagulation.\n",
-    " Experiment: toggle condensation off to see pure coagulation\n",
-    " broadening the distribution without adding mass.\n",
-    " \n",
+    "\n",
     "\n",
     " > Observe how number concentration drops (coagulation) while the\n",
     " > median radius grows (condensation + coagulation).\n",
@@ -673,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "96c62c01-a6cc-4b12-9e3e-17fac22397e2",
    "metadata": {},
    "outputs": [
@@ -689,8 +687,6 @@
     }
    ],
    "source": [
-    "# %%\n",
-    "\n",
     "fig, ax = plt.subplots(figsize=(7, 5))\n",
     "ax.plot(\n",
     "    aerosol_initial.particles.get_radius(),\n",
